feat: update deploy with env variable

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      GMAIL_CLIENT_ID: ${{ vars.GMAIL_CLIENT_ID }}
 
     steps:
       - name: Checkout code
