feat: update vite config and github deploy to use import.meta.env instead of process.env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,10 +22,15 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Build
+      - name: Build project
         env:
-          GMAIL_CLIENT_ID: ${{ secrets.GMAIL_CLIENT_ID }}
+          VITE_GMAIL_CLIENT_ID: ${{ secrets.GMAIL_CLIENT_ID }}
         run: npm run build
+
+      # - name: Build
+      #   env:
+      #     GMAIL_CLIENT_ID: ${{ secrets.GMAIL_CLIENT_ID }}
+      #   run: npm run build
         
       - name: Deploy to github pages
         run: echo "Deploying to https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
